--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "App\\Controllers\\": "src/controllers"
+            "Src\\": "src/",
+            "Src\\App\\": "src/app",
+            "Src\\App\\Controllers\\": "src/app/controllers"
         }
     },
     "extra": {
